tests/compile-fail/Rule_17_6.rs
fn main() {
    let data: [u32; static 4];
    //~^ ERROR expected expression, found keyword `static`
}
